--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Header -->
   <header>
-    <img src="GreenUVMLogo.png" alt="UVM Logo" class="logo">
+    <img src="UVM recolored logo.jpg" alt="UVM Logo" class="logo">
     <h1>OBGYN Clerkship</h1>
   </header>
 
@@ -17,15 +17,15 @@
   <nav>
     <button class="nav-btn" data-tab="resources">Resources</button>
     <button class="nav-btn" data-tab="profile">Profile</button>
-    <button class="nav-btn" data-tab="users">Users</button>
-    <button class="nav-btn" data-tab="admin">Admin</button>
+    <button class="nav-btn" data-tab="users permissions">Users</button>
+    <button class="nav-btn" data-tab="student grades">Admin</button>
   </nav>
 
   <!-- Main Content -->
   <main>
-    <!-- Admin Tab -->
-    <section id="admin" class="tab-content">
-      <h2>Admin Dashboard</h2>
+    <!-- Resources Tab -->
+    <section id="Resources" class="tab-content">
+      <h2>Resources</h2>
 
       <!-- Upload Resources -->
       <div class="section">
@@ -39,24 +39,18 @@
       <div class="section">
         <h3>Student Evaluations</h3>
         <ul id="student-evals">
-          <!-- Mock data -->
-          <li>Jane Doe: Excellent performance</li>
-          <li>John Smith: Needs improvement</li>
-          <li>Emily Davis: Outstanding participation</li>
         </ul>
       </div>
     </section>
 
     <!-- Other tabs (Profile, Users) -->
 
-    <section id="profile" class="tab-content">
-      <h2>Profile</h2>
-      <p>Profile content goes here...</p>
+    <section id="User Permissions" class="tab-content">
+      <h2>User Permissions</h2>
     </section>
 
-    <section id="users" class="tab-content">
-      <h2>Users</h2>
-      <p>User list goes here...</p>
+    <section id="Admin" class="tab-content">
+      <h2>Admin</h2>
     </section>
   </main>
 
