--- a/website/resources.html
+++ b/website/resources.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resources - OBGYN Clerkship</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Header with Navbar -->
@@ -45,6 +44,7 @@
       <ul id="uploaded-resources"></ul>
     </div>
   </main>
+  <script type="module" src="scripts/resources.js"></script>
 </body>
 </html>
 
